Fix - CSS: Bootstrap 4 needs border-spacing:0 if used with border-collapse and `cellspacing` isn't used in the HTML

--- a/media/css/dataTables.bootstrap4.css
+++ b/media/css/dataTables.bootstrap4.css
@@ -4,6 +4,7 @@ table.dataTable {
   margin-bottom: 6px !important;
   max-width: none !important;
   border-collapse: separate !important;
+  border-spacing: 0;
 }
 table.dataTable td,
 table.dataTable th {
